--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="images/Logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -263,12 +263,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="inqueries-down">
-                            <div class="inq-send">
-                                <p>snmonydemo@gmail.com</p>
-                            </div>    
-                            <div class="inquery-btn">
+                            <form action="mailto:someone@example.com" method="post" enctype="text/plain">
+                                <input type="text" name="name">
                                 <a href="#" class="custom-btn">Send</a>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -282,7 +280,7 @@
                     <div class="col-md-12">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                             <div class="container">
-                                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo"></a>
+                                <a class="navbar-brand" href="#"><img src="images/Logolast.png" alt="logo"></a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                             </button>
